2005-06-13  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/sessionwindow.py: show the window
	on "map-event" rather than on "realize" - fixes
	race condition with Xnest.

	* lib/protosession.py: handle EINTR from
	select.select() and commands.getstatusoutput()

2005-06-13  Mark McLoughlin  <markmc@redhat.com>

	Don't allow running Sabayon within a Sabayon session.
	Fixes bug #305510

	* lib/protosession.py:
	(ProtoSession.__start_session): set $SABAYON_SESSION_RUNNING
	
	* admin-tool/sabayon: pop up an error dialog if
	$SABAYON_SESSION_RUNNING is set.

2005-06-13  Mark McLoughlin  <markmc@redhat.com>

	Fix for "the Sabayon session is locked and I don't have
	a password for sabayon-admin issue". Bug #305771

	* lib/protosession.py:
	(ProtoSession.__start_session): set $RUNNING_UNDER_GDM
	env variable so Xscreensaver won't ever lock the screen.

Fri Jun 10 22:20:01 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* sabayon.spec.in: add a new file.
	* po/POTFILES.in: removed now missing file.

2005-06-10  Mark McLoughlin  <markmc@redhat.com>

	Embed Xnest in a window which we create. First step
	towards making the monitor window contain the prototype
	session	rather than the other way around.

	* admin-tool/Makefile.am: add sessionwindow.py and
	remove sabayon-session.
	
	* lib/protosession.py: allow passing a parent window id
	which Xnest should embed itself in.
	
	* admin-tool/sessionwindow.py: add. Creates a toplevel
	window and embeds Xnest in it.
	
	* admin-tool/profilesdialog.py: open a SessionWindow
	rather than running sabayon-session
	
	* admin-tool/sabayon-session: remove. I don't think
	we've needed to run the protosession code from a 
	separate process for quite a while now. The original
	problem was that we couldn't open an X connection
	with the Xnest server if we already had an open X
	connection, but we solved that with the open_x_connection()
	hack in protosession.py (I think)
	
	* lib/config.py.in: remove SESSION_TOOL_ARGV
